--- a/mmb_repo/templates/base.html
+++ b/mmb_repo/templates/base.html
@@ -3,7 +3,7 @@
 {% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en" class="app">
-<head>  
+<head>
   <meta charset="utf-8" />
   <title>MakeMyBand - Musicians | Bands | Blogs</title>
   <meta name="description" content="app, web app, responsive, admin dashboard, admin, flat, flat ui, ui kit, off screen nav" />
@@ -144,7 +144,7 @@
               </span>
               {{ request.user }} <b class="caret"></b>
             </a>
-            <ul class="dropdown-menu animated fadeInRight">            
+            <ul class="dropdown-menu animated fadeInRight">
               <li>
                 <span class="arrow top"></span>
                 <a href="{% url 'users:edit_profile' %}">Settings</a>
@@ -168,7 +168,7 @@
             </ul>
           </li>
         </ul>
-      </div> 
+      </div>
       {% else %}
          <div class="navbar-form navbar-right input-s-lg m-t m-l-n-xs hidden-xs">
           <!-- <ul class="nav navbar-nav m-n hidden-xs nav-user user">
@@ -212,7 +212,7 @@
 
       {% endif %}
 
-  
+
 
     </header>
     <section>
@@ -225,7 +225,7 @@
 
 
 
-                <!-- nav -->                 
+                <!-- nav -->
                 <nav class="nav-primary hidden-xs">
                   <ul class="nav bg clearfix">
                     <li class="hidden-nav-xs padder m-t m-b-sm text-xs text-muted">
@@ -280,21 +280,21 @@
                       </a>
                       <ul class="nav dk text-sm">
                         <li >
-                          <a href="layout-color.html" class="auto">                                                        
+                          <a href="layout-color.html" class="auto">
                             <i class="fa fa-angle-right text-xs"></i>
 
                             <span>Color option</span>
                           </a>
                         </li>
                         <li >
-                          <a href="layout-boxed.html" class="auto">                                                        
+                          <a href="layout-boxed.html" class="auto">
                             <i class="fa fa-angle-right text-xs"></i>
 
                             <span>Boxed layout</span>
                           </a>
                         </li>
                         <li >
-                          <a href="layout-fluid.html" class="auto">                                                        
+                          <a href="layout-fluid.html" class="auto">
                             <i class="fa fa-angle-right text-xs"></i>
 
                             <span>Fluid layout</span>
@@ -314,15 +314,15 @@
                       </a>
                       <ul class="nav dk text-sm">
                         <li >
-                          <a href="buttons.html" class="auto">                                                        
+                          <a href="buttons.html" class="auto">
                             <i class="fa fa-angle-right text-xs"></i>
 
                             <span>Buttons</span>
                           </a>
                         </li>
                         <li >
-                          <a href="icons.html" class="auto">                            
-                            <b class="badge bg-info pull-right">369</b>                                                        
+                          <a href="icons.html" class="auto">
+                            <b class="badge bg-info pull-right">369</b>
                             <i class="fa fa-angle-right text-xs"></i>
 
                             <span>Icons</span>
@@ -336,33 +336,33 @@
                           </a>
                         </li>
                         <li >
-                          <a href="widgets.html" class="auto">                            
-                            <b class="badge bg-dark pull-right">8</b>                                                        
+                          <a href="widgets.html" class="auto">
+                            <b class="badge bg-dark pull-right">8</b>
                             <i class="fa fa-angle-right text-xs"></i>
 
                             <span>Widgets</span>
                           </a>
                         </li>
                         <li >
-                          <a href="components.html" class="auto">                                                        
+                          <a href="components.html" class="auto">
                             <i class="fa fa-angle-right text-xs"></i>
 
                             <span>Components</span>
                           </a>
                         </li>
                         <li >
-                          <a href="list.html" class="auto">                                                        
+                          <a href="list.html" class="auto">
                             <i class="fa fa-angle-right text-xs"></i>
 
                             <span>List group</span>
                           </a>
                         </li>
                         <li >
-                          <a href="#table" class="auto">                            
+                          <a href="#table" class="auto">
                             <span class="pull-right text-muted">
                               <i class="fa fa-angle-left text"></i>
                               <i class="fa fa-angle-down text-active"></i>
-                            </span>                            
+                            </span>
                             <i class="fa fa-angle-right text-xs"></i>
 
                             <span>Table</span>
@@ -383,11 +383,11 @@
                           </ul>
                         </li>
                         <li >
-                          <a href="#form" class="auto">                            
+                          <a href="#form" class="auto">
                             <span class="pull-right text-muted">
                               <i class="fa fa-angle-left text"></i>
                               <i class="fa fa-angle-down text-active"></i>
-                            </span>                            
+                            </span>
                             <i class="fa fa-angle-right text-xs"></i>
 
                             <span>Form</span>
@@ -414,21 +414,21 @@
                           </ul>
                         </li>
                         <li >
-                          <a href="chart.html" class="auto">                                                        
+                          <a href="chart.html" class="auto">
                             <i class="fa fa-angle-right text-xs"></i>
 
                             <span>Chart</span>
                           </a>
                         </li>
                         <li >
-                          <a href="portlet.html" class="auto">                                                        
+                          <a href="portlet.html" class="auto">
                             <i class="fa fa-angle-right text-xs"></i>
 
                             <span>Portlet</span>
                           </a>
                         </li>
                         <li >
-                          <a href="timeline.html" class="auto">                                                        
+                          <a href="timeline.html" class="auto">
                             <i class="fa fa-angle-right text-xs"></i>
 
                             <span>Timeline</span>
@@ -448,56 +448,56 @@
                       </a>
                       <ul class="nav dk text-sm">
                         <li >
-                          <a href="profile.html" class="auto">                                                        
+                          <a href="profile.html" class="auto">
                             <i class="fa fa-angle-right text-xs"></i>
 
                             <span>Profile</span>
                           </a>
                         </li>
                         <li >
-                          <a href="blog.html" class="auto">                                                        
+                          <a href="blog.html" class="auto">
                             <i class="fa fa-angle-right text-xs"></i>
 
                             <span>Blog</span>
                           </a>
                         </li>
                         <li >
-                          <a href="invoice.html" class="auto">                                                        
+                          <a href="invoice.html" class="auto">
                             <i class="fa fa-angle-right text-xs"></i>
 
                             <span>Invoice</span>
                           </a>
                         </li>
                         <li >
-                          <a href="gmap.html" class="auto">                                                        
+                          <a href="gmap.html" class="auto">
                             <i class="fa fa-angle-right text-xs"></i>
 
                             <span>Google Map</span>
                           </a>
                         </li>
                         <li >
-                          <a href="jvectormap.html" class="auto">                                                        
+                          <a href="jvectormap.html" class="auto">
                             <i class="fa fa-angle-right text-xs"></i>
 
                             <span>Vector Map</span>
                           </a>
                         </li>
                         <li >
-                          <a href="signin.html" class="auto">                                                        
+                          <a href="signin.html" class="auto">
                             <i class="fa fa-angle-right text-xs"></i>
 
                             <span>Signin</span>
                           </a>
                         </li>
                         <li >
-                          <a href="signup.html" class="auto">                                                        
+                          <a href="signup.html" class="auto">
                             <i class="fa fa-angle-right text-xs"></i>
 
                             <span>Signup</span>
                           </a>
                         </li>
                         <li >
-                          <a href="404.html" class="auto">                                                        
+                          <a href="404.html" class="auto">
                             <i class="fa fa-angle-right text-xs"></i>
 
                             <span>404</span>
@@ -529,7 +529,7 @@
                 <!-- / nav -->
               </div>
             </section>
-            
+
             <footer class="footer hidden-xs no-padder text-center-nav-xs"></footer>
           </section>
         </aside>
@@ -537,7 +537,7 @@
 
 {% endblock %}
 
-{% block content %} 
+{% block content %}
 
 
 {% endblock %}
@@ -618,16 +618,17 @@
   <script src=" {% static 'js/bootstrap.js' %}"></script>
 
   <!-- App -->
-  <script src=" {% static 'js/app.js' %}"></script>  
- 
+  <script src=" {% static 'js/app.js' %}"></script>
+
   <script src=" {% static 'js/slimscroll/jquery.slimscroll.min.js' %}"></script>
     <script src=" {% static 'js/app.plugin.js' %}"></script>
-    <script src=" {% static 'js/jquery-ui-min.js' %}"></script>  
+    <script src=" {% static 'js/jquery-ui-min.js' %}"></script>
   <script type="text/javascript" src=" {% static 'js/jPlayer/jquery.jplayer.min.js' %}"></script>
   <script type="text/javascript" src=" {% static 'js/jPlayer/add-on/jplayer.playlist.min.js' %}"></script>
-  <script type="text/javascript" src=" {% static 'js/jPlayer/demo.js' %}"></script>
+  <!--<script type="text/javascript" src=" {% static 'js/jPlayer/demo.js' %}"></script>-->
   <script type="text/javascript" src=" {% static 'js/chosen.jquery.min.js' %}"></script>
-  <script src=" {% static 'js/project.js' %}"></script>  
+  <script src=" {% static 'js/project.js' %}"></script>
+  <script src=" {% static 'js/jquery.formset.js' %}"></script>
   {% block custom_js %}
   <!--   Your custom js will be here. -->
   {% endblock %}
