--- a/mmb_repo/templates/base.html
+++ b/mmb_repo/templates/base.html
@@ -621,11 +621,11 @@
   <script src=" {% static 'js/app.js' %}"></script>
 
   <script src=" {% static 'js/slimscroll/jquery.slimscroll.min.js' %}"></script>
-    <script src=" {% static 'js/app.plugin.js' %}"></script>
-    <script src=" {% static 'js/jquery-ui-min.js' %}"></script>
+  <script src=" {% static 'js/app.plugin.js' %}"></script>
+  <script src=" {% static 'js/jquery-ui-min.js' %}"></script>
   <script type="text/javascript" src=" {% static 'js/jPlayer/jquery.jplayer.min.js' %}"></script>
   <script type="text/javascript" src=" {% static 'js/jPlayer/add-on/jplayer.playlist.min.js' %}"></script>
-  <!--<script type="text/javascript" src=" {% static 'js/jPlayer/demo.js' %}"></script>-->
+  <script type="text/javascript" src=" {% static 'js/jPlayer/demo.js' %}"></script>
   <script type="text/javascript" src=" {% static 'js/chosen.jquery.min.js' %}"></script>
   <script src=" {% static 'js/project.js' %}"></script>
   <script src=" {% static 'js/jquery.formset.js' %}"></script>
