--- a/mmb_repo/templates/bands/create_band.html
+++ b/mmb_repo/templates/bands/create_band.html
@@ -64,6 +64,7 @@
                             {% endfor %}
                         {% endif %}
                             </div>
+{#                        <a href="{% url 'users:invite_user' %}" class="btn  btn-info">MyBand</a>#}
                               <!--<p style=""><a class="delete" href="#">Delete</a></p>-->
 
                     </div>
