single selection fix

--- a/mmb_repo/templates/base.html
+++ b/mmb_repo/templates/base.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="{% static 'css/font.css' %}" type="text/css">
   <link rel="stylesheet" href="{% static 'css/app.css' %}" type="text/css">
   <link rel="stylesheet" href="{% static 'css/jquery-ui.css' %}" type="text/css" media="all" />
+  <link rel="stylesheet" href="{% static 'css/jquery.multiselect.css' %}" type="text/css">
 
   {% block custom_css %}
   <!--   Your custom css will be here. -->
@@ -619,6 +620,7 @@
   <script src=" {% static 'js/bootstrap.js' %}"></script>
 
   <!-- App -->
+  <script type="text/javascript" src=" {% static 'js/jquery.multiselect.min.js' %}"></script>
   <script src=" {% static 'js/app.js' %}"></script>
   <script src=" {% static 'js/slimscroll/jquery.slimscroll.min.js' %}"></script>
   <script src=" {% static 'js/app.plugin.js' %}"></script>
