--- a/mmb_repo/static/css/style.css
+++ b/mmb_repo/static/css/style.css
@@ -57,11 +57,6 @@ font-size: 64px;
 }
 
 
-h2 span{
-font-style: italic;
-font-size: 30px;
-}
-
 p{
 font-size: 19px;
 text-align: center;
@@ -123,22 +118,14 @@ ul.social li a.vimeo{
 background: url(../images/social.png) right -120px no-repeat;
 }
 .myButton {
-	-moz-box-shadow:inset 0px 39px 0px -24px #e67a73;
-	-webkit-box-shadow:inset 0px 39px 0px -24px #e67a73;
-	box-shadow:inset 0px 39px 0px -24px #e67a73;
-	background-color:#e4685d;
-	-moz-border-radius:4px;
-	-webkit-border-radius:4px;
-	border-radius:4px;
-	border:1px solid #ffffff;
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	font-family:Arial;
-	font-size:15px;
-	padding:6px 15px;
-	text-decoration:none;
-	text-shadow:0px 1px 0px #b23e35;
+background-color: #2a2a2a; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
 }
 .myButton:hover {
 	background-color:#eb675e;
