--- a/mmb_repo/templates/index.html
+++ b/mmb_repo/templates/index.html
@@ -27,12 +27,14 @@
 		<div class="uppersection">
 			<div class="logo"><h1>mmb</h1><span>MakeMyBand</span></div>
 			<h2>
-                <strong>Coming Soon</strong> <br/>to redefine
+                <strong>Coming Soon</strong> <br/>Click below for
+                <br>
                 <span><a href="https://docs.google.com/forms/d/1YI3kcqW26FoPy0qLZbKApNCX5tSjFV_09b040Rp--fY/viewform" class="myButton" target="_blank">
-                    The Music Platform</a>
+                    The Musical Connection</a>
                 </span>
+                <br/>
+                <br/>
             </h2>
-			<p>Etiam ut eros est, quis ornare dui. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
 		</div>
 		<ul class="social">
 			<li><a href="https://www.facebook.com/makemyband.in/" target="_blank" class="fb">Facebook</a></li>
