more changes to forms

--- a/mmb_repo/templates/bands/create_band.html
+++ b/mmb_repo/templates/bands/create_band.html
@@ -101,7 +101,7 @@
                     {% endfor %}
                 {% endif %}
                 <br>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-primary">Make My Band</button>
             <br><br><br><br><br><br><br><br>
             </form>
         </div>
