add cat and change return format

--- a/mmb_repo/templates/base.html
+++ b/mmb_repo/templates/base.html
@@ -99,7 +99,7 @@
                 </div><!-- /.modal-content -->
               </div><!-- /.modal-dialog -->
             </div>
-          <a href="{% url 'bands:create_band' %}" class="btn  btn-info">MyBand</a>
+          <a href="{% url 'bands:create_band' %}" class="btn  btn-info">CreateMyBand</a>
       </div>
 
       <!-- to be shown when user is logged in -->
