adding sidebar in edit form and validating username

--- a/mmb_repo/templates/users/profile_form.html
+++ b/mmb_repo/templates/users/profile_form.html
@@ -20,6 +20,12 @@
             <br><br><br><br><br><br>
             <div id='form-errors'>{{ form_errors }}</div>
         </div>
+        <div class="col-md-3">
+            <h3 class="font-bold" style="color:#1ab667">Welcome to makemyband</h3>
+            <div style="color:#1ab667">
+                <p>you can listen music , create bands and FUCK</p>
+            </div>
+        </div>
 
     </div>
     </div>
